[package]
name = "ftx-otc-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luizfilipester@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "ftx_otc"

[dependencies]
serde_json = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]
