[package]
name = "ftx-otc-rs"
version = "0.1.0"
authors = ["Luiz Parreira <luizfilipester@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "ftx_otc"

[dependencies]
chrono = { version = "0.4.22", features = ["clock", "serde"], default-features = false }
hex = { version = "0.4.3", features = ["std"], default-features = false }
hmac = { version = "0.12.1", default-features = false }
reqwest = { version = "0.11", features = ["gzip", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.147", features = ["derive"], default-features = false }
serde_json = { version = "1.0.87", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0.37", default-features = false }
